Visibility public/private ok for articles

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -21,6 +21,11 @@
     <%= form.text_area :content %>
   </div>
 
+  <div class="field">
+    <%= form.label :visibility %>
+    <%= form.select :visibility, ["Public", "Private"] %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
