--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,33 +1,45 @@
-<div class="d-flex justify-content-center">
+<div class="d-flex">
 
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
+  <%= form_for resource, as: resource_name, url: registration_path(resource_name), html: { class: "form-signin mx-auto my-auto" } do |f| %>
 
-    <h2>Sign up</h2>
+    <h3 class="mb-3 text-center">Sign up</h3>
 
-    <div class="field">
-      <%= f.label :email %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= devise_error_messages! %>
+
+    <div class="form-group">
+      <%= f.label :first_name %><br />
+      <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", class: "form-control" %>
     </div>
 
-    <div class="field">
+    <div class="form-group">
+      <%= f.label :last_name %><br />
+      <%= f.text_field :last_name, class: "form-control" %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :email, "Email" %><br />
+      <%= f.email_field :email, autocomplete: "email", class: "form-control" %>
+    </div>
+
+    <div class="form-group">
       <%= f.label :password %>
       <% if @minimum_password_length %>
       <em>(<%= @minimum_password_length %> characters minimum)</em>
       <% end %><br />
-      <%= f.password_field :password, autocomplete: "new-password" %>
+      <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
     </div>
 
-    <div class="field">
+    <div class="form-group">
       <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
     </div>
 
-    <div class="actions">
-      <%= f.submit "Sign up" %>
+    <div class="actions mt-5">
+      <%= f.submit "Sign up", class: "btn btn-lg btn-primary btn-block" %>
     </div>
 
     <%= render "devise/shared/links" %>
+
   <% end %>
 
 </div>
