--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,7 @@
-<div class="container my-5", style="max-width:400px">
+<div class="d-flex">
       
-  <%= form_for @user, html: { class: "form-signin mt-3" } do |f| %>
-    <h1 class="h3 mb-3 font-weight-normal text-center">Edit profile</h1>
+  <%= form_for @user, html: { class: "form-signin mx-auto my-auto" } do |f| %>
+    <h3 class="mb-3 text-center">Edit profile</h3>
 
     <div class="form-group">
       <%= f.label :first_name %><br />
@@ -17,11 +17,6 @@
       <%= f.label :description %><br />
       <%= f.text_area :description, class: "form-control" %>
     </div>
-
-    # <div class="form-group">
-    #   <%= f.label :profile_picture %><br />
-    #   <%= f.file_field :avatar, class: "form-control" %>
-    # </div>
 
     <div class="actions mt-5">
       <%= f.submit "Edit", class: "btn btn-lg btn-primary btn-block" %>
